----------------------------------------------------------------------
 OmegaT 2.1.8 
----------------------------------------------------------------------
  2 Enhancements
  0 Bugfix
----------------------------------------------------------------------
2.1.8 vs. 2.1.7 update 3

  Other enhancements:

  - Italian localisation updated to 2.1.7 (UI, Readme, Instant Start)
  - Spanish localisation updated to 2.1.7 (UI, Readme, Instant Start, documentation)

----------------------------------------------------------------------
 OmegaT 2.1.7 update 3
----------------------------------------------------------------------
  2 Enhancements
  5 Bugfixes
----------------------------------------------------------------------
2.1.7 update 3 vs. 2.1.7 update 2

  Implemented requests:

  - Extended project statistics
  http://sourceforge.net/support/tracker.php?aid=2988953

  Other enhancements:
  
  - OpenXML filter: new options to translate diagrams (Word) and 
charts (PowerPoint)

  Bug fixes:

  - In some circumstances, the search results could be all highlighted.
The issue was not totally corrected in update 2

  - Superfluous debug message (visible in the console and in the log),
e.g., 15082: Info: DEBUG: class=java.lang.Integer val=24, has been removed

  - OpenXML filter: for some Word shapes, the text presented to the 
translator was not the text visible in Word 2007/2010, but only the "fallback"
text for backward compatibility. As a result, the text appeared untranslated 
in the target document. Now both text are presented to the
translator.

  - Some TBX glossaries were not read (e.g., Microsoft glossaries)

  - Webstart jnidispatch error on Windows 64-bit
  http://sourceforge.net/support/tracker.php?aid=3024102
  
----------------------------------------------------------------------
 OmegaT 2.1.7 update 2
----------------------------------------------------------------------
  2 Enhancements
  1 Bugfix