@@ -888,6 +888,8 @@ OpenXML_TRANSLATE_SLIDE_COMMENTS=Commentaires des &diapositives
 OpenXML_TRANSLATE_SLIDE_MASTERS=Masque des diapositi&ves
 OpenXML_TRANSLATE_SLIDE_LAYOUTS=M&ise en page des diapositives
 OpenXML_TRANSLATE_CHARTS=Graphi&ques
+OpenXML_GENERIC_OPTIONS=Options g\u00e9n\u00e9riques :
+OpenXML_AGGREGATE_TAGS=Agr\u00e9ger les balises
 
 OpenXML_ERROR_IN_FILE=Erreur dans le fichier
 
